--- a/Kolokwium/kolo.html
+++ b/Kolokwium/kolo.html
@@ -22,12 +22,10 @@
         <!-- <li>element 1 <button>-</button></li> -->
     </table>
     
-    <div>
+    <div id='d'>
         <label for='dostepne'>Dostępne:</label>
         <p id='dostepne'>0</p>      
-    </div>
     
-    <div>
          <label for='wszystkie'>Wszystkie:</label>
         <p id='wszystkie'>0</p>
     </div>
