lab 6 - zad. dom.

--- a/Lesson 6 - Typescript/index.html
+++ b/Lesson 6 - Typescript/index.html
@@ -13,7 +13,7 @@
         
         <input id="searchInput" class="search-input" type="text"/>
 		<button id="searchTaskButton">Search</button>
-		<div id="tasksList">
+		<div id="searchTasksList">
         </div>
 		
         <script src="code.js"></script>
